# Nightshift

./: .gitignore  .nightshift.json  .nightshift.json.example  .recursive.json  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SKILL.md  System-design.md  install.sh  nightshift.py  pyproject.toml  requirements-dev.txt  run.sh  test.sh
.claude/agents/: achieve.md  architecture-reviewer.md  build.md  code-reviewer.md  docs-reviewer.md  evolve.md  meta-reviewer.md  review.md  safety-reviewer.md  security.md
.claude/commands/: audit-plan.md  audit-spec.md  changelog.md  consolidate-fix.md  implement.md  pr-review-team.md  pr-review.md  prompt.md  review-cycle.md  spec.md  verify-review.md
.codex/: config.toml
.codex/agents/: achieve.toml  architecture-reviewer.md  architecture-reviewer.toml  audit-agent.md  audit-agent.toml  brain.md  brain.toml  build.toml  code-reviewer.md  code-reviewer.toml  docs-reviewer.md  docs-reviewer.toml  evolve.toml  meta-reviewer.md  meta-reviewer.toml  oversee.md  oversee.toml  review.toml  safety-reviewer.md  safety-reviewer.toml  security.toml  strategize.md  strategize.toml
.github/workflows/: ci.yml  notify-orbitweb.yml
.recursive/agents/: TEMPLATE.md  achieve.md  architecture-reviewer.md  audit-agent.md  brain.md  build.md  code-reviewer.md  docs-reviewer.md  evolve.md  meta-reviewer.md  oversee.md  review.md  safety-reviewer.md  security.md  strategize.md
.recursive/architecture/: MODULE_MAP.md
.recursive/autonomy/: 2026-04-06b.md
.recursive/changelog/: v0.0.1.md  v0.0.3.md  v0.0.5.md  v0.0.6.md  v0.0.8.md
.recursive/commitments/: log.md
.recursive/decisions/: log.md
.recursive/engine/: daemon-v1.sh  daemon.sh  dashboard.py  format-stream.py  lib-agent.sh  pick-role.py  signals.py  watchdog.sh
.recursive/evaluations/: 0001.md  0003.md  0004.md  0005.md  0006.md  0007.md  0010.md  0011.md  0016.md  0017.md  0019.md  0020.md  0091.md  0093.md  0094.md
.recursive/friction/: log.md
.recursive/handoffs/: 0105.md  0106.md  0138.md  0139.md  0140.md  LATEST.md  README.md
.recursive/incidents/: log.md
.recursive/learnings/: 2026-04-03-code-structure-rules-work.md  2026-04-03-escalation-pattern.md  2026-04-03-extract-json-embedded-limits.md  2026-04-03-mypy-typeddict-get.md  2026-04-03-reuse-existing-functions.md  2026-04-03-ruff-import-sort-trap.md  2026-04-03-stale-pr-branches.md  2026-04-04-always-make-check-never-partial-lint.md  2026-04-04-interactive-shell-testing.md  2026-04-04-openai-cached-tokens-include-total.md  2026-04-04-per-file-before-total-truncation.md  2026-04-04-plan-agent-simpler-than-cycle.md  2026-04-04-review-notes-must-become-tasks.md  2026-04-04-task-selection-mesa-optimization.md  2026-04-05-case-insensitive-path-resolution-needs-directory-enumeration.md  2026-04-05-case-insensitive-shift-log-paths.md  2026-04-05-contributing-md-synthesis-not-copy.md  2026-04-05-cost-analysis-needs-tolerant-session-parsing.md  2026-04-05-daemon-hot-reload.md  2026-04-05-dry-run-tests-need-isolated-runtime-artifacts.md  (+25 more)
Recursive/: AGENTS.md  CLAUDE.md
nightshift/: README.md  SKILL.md  __init__.py  __main__.py  cleanup.py  cli.py  compact.py  config.py  constants.py  coordination.py  costs.py  cycle.py  decomposer.py  e2e.py  errors.py  eval_targets.py  evaluation.py  feature.py  integrator.py  module_map.py  multi.py  planner.py  profiler.py  readiness.py  scoring.py  shell.py  state.py  subagent.py  summary.py  types.py  worktree.py
reviews/: audit-plan.md
schemas/: feature.schema.json
scripts/: check.sh  context-map.sh  daemon-overseer.sh  daemon-review.sh  daemon-strategist.sh  daemon.sh  format-stream.py  install.sh  lib-agent.sh  list-tasks.sh  pick-role.py  rollback.sh  run.sh  smoke-test.sh  test.sh  validate-docs.sh  validate-tasks.sh  watchdog.sh
tests/: test_feature_build.py  test_module_map.py  test_nightshift.py  test_pick_role.py
(+804 files in other folders)
