[project]
name = "nightshift"
requires-python = ">=3.9"
dependencies = []

[tool.mypy]
strict = true
warn_unreachable = true
python_version = "3.9"
exclude = ["nightshift/tests/", "Recursive/"]

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "RUF", "BLE", "S", "T20", "PT", "C4"]
ignore = [
    "E501",  # line length -- enforced by formatter, not linter
]

[tool.ruff.lint.per-file-ignores]
"nightshift/tests/*" = ["S101", "S108", "C408", "S603", "S607"]
"Recursive/tests/*" = ["S101", "S108", "C408", "S603", "S607"]
"nightshift/core/constants.py" = ["T201", "S108"]
"nightshift/cli.py" = ["T201"]
"nightshift/core/shell.py" = ["S603", "S607"]
"nightshift/owl/cycle.py" = ["S603", "S607"]
"nightshift/infra/worktree.py" = ["S603", "S607"]

[tool.pytest.ini_options]
testpaths = ["nightshift/tests", "Recursive/tests"]
